Set permissions to none

--- a/.github/workflows/black-lint.yml
+++ b/.github/workflows/black-lint.yml
@@ -6,6 +6,7 @@ on: [push, pull_request]
 
 jobs:
   black-lint:
+    permissions: {} # Remove all permissions
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
