--- a/.github/workflows/black-lint.yml
+++ b/.github/workflows/black-lint.yml
@@ -10,4 +10,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: psf/black@stable
+      - uses: psf/black@23.12.1
