--- a/.github/workflows/black-suggest.yml
+++ b/.github/workflows/black-suggest.yml
@@ -7,7 +7,8 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install Dependance
         run: |
-          pip install black
+          sudo apt isntall python-pip
+          pip install black==23.12.1
       - name: Run black style check.
         run: |
           black .
