--- a/fast64_internal/f3d/node_library/Advanced_Texture_Settings.json
+++ b/fast64_internal/f3d/node_library/Advanced_Texture_Settings.json
@@ -3,763 +3,555 @@
 	"nodes": {
 		"Reroute.002": {
 			"bl_idname": "NodeReroute",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					-108.689697265625,
-					-41.78269577026367
-				]
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				}
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
 			],
-			"outputs": [
-				[
-					{
-						"node": "Group.005",
-						"socket": "Tex Coordinate"
-					}
-				]
-			]
+			"location": [
+				-108.689697265625,
+				-41.78269577026367
+			],
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Group.005",
+							"socket": "Tex Coordinate"
+						}
+					]
+				}
+			}
 		},
 		"Reroute": {
 			"bl_idname": "NodeReroute",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					-108.68953704833984,
-					156.6044921875
-				]
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				}
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
 			],
-			"outputs": [
-				[
-					{
-						"node": "Reroute.002",
-						"socket": "Input"
-					}
-				]
-			]
+			"location": [
+				-108.68953704833984,
+				156.6044921875
+			],
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Reroute.002",
+							"socket": "Input"
+						}
+					]
+				}
+			}
 		},
 		"Combine XYZ": {
 			"bl_idname": "ShaderNodeCombineXYZ",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					340.6651306152344,
-					284.261962890625
-				],
-				"width": 140.0
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				}
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
 			],
-			"outputs": [
-				[
-					{
-						"node": "Group Output",
-						"socket": "UV"
-					}
-				]
-			]
+			"location": [
+				340.6651306152344,
+				284.261962890625
+			],
+			"width": 140.0,
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Group Output",
+							"socket": "UV"
+						}
+					]
+				}
+			}
 		},
 		"Group Output": {
 			"bl_idname": "NodeGroupOutput",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"is_active_output": true,
-				"location": [
-					497.1575622558594,
-					284.226806640625
-				],
-				"width": 140.0
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": [
-							0.0,
-							0.0,
-							0.0
-						]
-					}
-				},
-				{
-					"data": {}
-				}
-			]
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
+			],
+			"is_active_output": true,
+			"location": [
+				497.1575622558594,
+				284.226806640625
+			],
+			"width": 140.0
 		},
 		"Reroute.026": {
 			"bl_idname": "NodeReroute",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					315.945068359375,
-					202.6527557373047
-				]
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				}
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
 			],
-			"outputs": [
-				[
-					{
-						"node": "Combine XYZ",
-						"socket": "Y"
-					}
-				]
-			]
+			"location": [
+				315.945068359375,
+				202.6527557373047
+			],
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Combine XYZ",
+							"socket": "Y"
+						}
+					]
+				}
+			}
 		},
 		"Reroute.027": {
 			"bl_idname": "NodeReroute",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					315.945068359375,
-					225.0103302001953
-				]
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				}
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
 			],
-			"outputs": [
-				[
-					{
-						"node": "Combine XYZ",
-						"socket": "X"
-					}
-				]
-			]
+			"location": [
+				315.945068359375,
+				225.0103302001953
+			],
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Combine XYZ",
+							"socket": "X"
+						}
+					]
+				}
+			}
 		},
 		"Reroute.003": {
 			"bl_idname": "NodeReroute",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					315.9451599121094,
-					90.36263275146484
-				]
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				}
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
 			],
-			"outputs": [
-				[
-					{
-						"node": "Reroute.026",
-						"socket": "Input"
-					}
-				]
-			]
+			"location": [
+				315.9451599121094,
+				90.36263275146484
+			],
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Reroute.026",
+							"socket": "Input"
+						}
+					]
+				}
+			}
 		},
 		"Group.006": {
 			"bl_idname": "ShaderNodeGroup",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					-86.1416015625,
-					461.908447265625
-				],
-				"node_tree": {
-					"serialized_type": "NodeTree",
-					"name": "TileSettings"
-				},
-				"width": 202.857666015625
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": 0.5
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.5
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.5
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.5
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				}
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
 			],
-			"outputs": [
-				[
-					{
-						"node": "Reroute.027",
-						"socket": "Input"
-					}
-				]
-			]
+			"location": [
+				-86.1416015625,
+				461.908447265625
+			],
+			"node_tree": {
+				"serialized_type": "NodeTree",
+				"name": "TileSettings"
+			},
+			"width": 202.857666015625,
+			"inputs": {
+				"0": {
+					"default_value": 0.5
+				},
+				"2": {
+					"default_value": 0.5
+				},
+				"3": {
+					"default_value": 0.5
+				},
+				"5": {
+					"default_value": 0.5
+				}
+			},
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Reroute.027",
+							"socket": "Input"
+						}
+					]
+				}
+			}
 		},
 		"Group Input": {
 			"bl_idname": "NodeGroupInput",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					-764.3580932617188,
-					406.41357421875
-				],
-				"width": 140.0
-			},
-			"outputs": [
-				[
-					{
-						"node": "Group.006",
-						"socket": "Tex Coordinate"
-					}
-				],
-				[
-					{
-						"node": "Group.006",
-						"socket": "Shift"
-					}
-				],
-				[
-					{
-						"node": "Group.006",
-						"socket": "Low"
-					}
-				],
-				[
-					{
-						"node": "Group.006",
-						"socket": "High"
-					}
-				],
-				[
-					{
-						"node": "Group.006",
-						"socket": "Mask"
-					}
-				],
-				[
-					{
-						"node": "Group.006",
-						"socket": "Tex Size"
-					}
-				],
-				[
-					{
-						"node": "Group.006",
-						"socket": "Clamp"
-					}
-				],
-				[
-					{
-						"node": "Group.006",
-						"socket": "Mirror"
-					}
-				],
-				[
-					{
-						"node": "Reroute.001",
-						"socket": "Input"
-					}
-				],
-				[
-					{
-						"node": "Group.005",
-						"socket": "Shift"
-					}
-				],
-				[
-					{
-						"node": "Group.005",
-						"socket": "Low"
-					}
-				],
-				[
-					{
-						"node": "Group.005",
-						"socket": "High"
-					}
-				],
-				[
-					{
-						"node": "Group.005",
-						"socket": "Mask"
-					}
-				],
-				[
-					{
-						"node": "Group.005",
-						"socket": "Tex Size"
-					}
-				],
-				[
-					{
-						"node": "Group.005",
-						"socket": "Clamp"
-					}
-				],
-				[
-					{
-						"node": "Group.005",
-						"socket": "Mirror"
-					}
-				],
-				[]
-			]
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
+			],
+			"location": [
+				-764.3580932617188,
+				406.41357421875
+			],
+			"width": 140.0,
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Group.006",
+							"socket": "Tex Coordinate"
+						}
+					]
+				},
+				"1": {
+					"links": [
+						{
+							"node": "Group.006",
+							"socket": "Shift"
+						}
+					]
+				},
+				"2": {
+					"links": [
+						{
+							"node": "Group.006",
+							"socket": "Low"
+						}
+					]
+				},
+				"3": {
+					"links": [
+						{
+							"node": "Group.006",
+							"socket": "High"
+						}
+					]
+				},
+				"4": {
+					"links": [
+						{
+							"node": "Group.006",
+							"socket": "Mask"
+						}
+					]
+				},
+				"5": {
+					"links": [
+						{
+							"node": "Group.006",
+							"socket": "Tex Size"
+						}
+					]
+				},
+				"6": {
+					"links": [
+						{
+							"node": "Group.006",
+							"socket": "Clamp"
+						}
+					]
+				},
+				"7": {
+					"links": [
+						{
+							"node": "Group.006",
+							"socket": "Mirror"
+						}
+					]
+				},
+				"8": {
+					"links": [
+						{
+							"node": "Reroute.001",
+							"socket": "Input"
+						}
+					]
+				},
+				"9": {
+					"links": [
+						{
+							"node": "Group.005",
+							"socket": "Shift"
+						}
+					]
+				},
+				"10": {
+					"links": [
+						{
+							"node": "Group.005",
+							"socket": "Low"
+						}
+					]
+				},
+				"11": {
+					"links": [
+						{
+							"node": "Group.005",
+							"socket": "High"
+						}
+					]
+				},
+				"12": {
+					"links": [
+						{
+							"node": "Group.005",
+							"socket": "Mask"
+						}
+					]
+				},
+				"13": {
+					"links": [
+						{
+							"node": "Group.005",
+							"socket": "Tex Size"
+						}
+					]
+				},
+				"14": {
+					"links": [
+						{
+							"node": "Group.005",
+							"socket": "Clamp"
+						}
+					]
+				},
+				"15": {
+					"links": [
+						{
+							"node": "Group.005",
+							"socket": "Mirror"
+						}
+					]
+				}
+			}
 		},
 		"Math.001": {
 			"bl_idname": "ShaderNodeMath",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					146.7432403564453,
-					125.59513092041016
-				],
-				"operation": "MULTIPLY",
-				"use_clamp": false,
-				"width": 140.0
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": -1.0
-					}
-				},
-				{
-					"data": {
-						"default_value": -1.0
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.5,
-						"enabled": false
-					}
-				}
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
 			],
-			"outputs": [
-				[
-					{
-						"node": "Reroute.003",
-						"socket": "Input"
-					}
-				]
-			]
+			"location": [
+				146.7432403564453,
+				125.59513092041016
+			],
+			"operation": "MULTIPLY",
+			"use_clamp": false,
+			"width": 140.0,
+			"inputs": {
+				"0": {
+					"default_value": -1.0
+				},
+				"1": {
+					"default_value": -1.0
+				},
+				"2": {
+					"default_value": 0.5,
+					"enabled": false
+				}
+			},
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Reroute.003",
+							"socket": "Input"
+						}
+					]
+				}
+			}
 		},
 		"Math.004": {
 			"bl_idname": "ShaderNodeMath",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					-279.63385009765625,
-					189.7225799560547
-				],
-				"operation": "MULTIPLY_ADD",
-				"use_clamp": false,
-				"width": 140.0
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": 0.5
-					}
-				},
-				{
-					"data": {
-						"default_value": -1.0
-					}
-				},
-				{
-					"data": {
-						"default_value": 1.0
-					}
-				}
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
 			],
-			"outputs": [
-				[
-					{
-						"node": "Reroute",
-						"socket": "Input"
-					}
-				]
-			]
+			"location": [
+				-279.63385009765625,
+				189.7225799560547
+			],
+			"operation": "MULTIPLY_ADD",
+			"use_clamp": false,
+			"width": 140.0,
+			"inputs": {
+				"0": {
+					"default_value": 0.5
+				},
+				"1": {
+					"default_value": -1.0
+				},
+				"2": {
+					"default_value": 1.0
+				}
+			},
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Reroute",
+							"socket": "Input"
+						}
+					]
+				}
+			}
 		},
 		"Reroute.001": {
 			"bl_idname": "NodeReroute",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					-427.7146301269531,
-					196.370849609375
-				]
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				}
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
 			],
-			"outputs": [
-				[
-					{
-						"node": "Math.004",
-						"socket": 0
-					}
-				]
-			]
+			"location": [
+				-427.7146301269531,
+				196.370849609375
+			],
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Math.004",
+							"socket": 0
+						}
+					]
+				}
+			}
 		},
 		"Group.005": {
 			"bl_idname": "ShaderNodeGroup",
-			"data": {
-				"color": [
-					0.6079999804496765,
-					0.6079999804496765,
-					0.6079999804496765
-				],
-				"location": [
-					-83.787109375,
-					46.46406936645508
-				],
-				"node_tree": {
-					"serialized_type": "NodeTree",
-					"name": "TileSettings"
-				},
-				"width": 199.55996704101562
-			},
-			"inputs": [
-				{
-					"data": {
-						"default_value": 0.5
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.5
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.5
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.5
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				},
-				{
-					"data": {
-						"default_value": 0.0
-					}
-				}
+			"color": [
+				0.6079999804496765,
+				0.6079999804496765,
+				0.6079999804496765
 			],
-			"outputs": [
-				[
-					{
-						"node": "Math.001",
-						"socket": 0
-					}
-				]
-			]
+			"location": [
+				-83.787109375,
+				46.46406936645508
+			],
+			"node_tree": {
+				"serialized_type": "NodeTree",
+				"name": "TileSettings"
+			},
+			"width": 199.55996704101562,
+			"inputs": {
+				"0": {
+					"default_value": 0.5
+				},
+				"2": {
+					"default_value": 0.5
+				},
+				"3": {
+					"default_value": 0.5
+				},
+				"5": {
+					"default_value": 0.5
+				}
+			},
+			"outputs": {
+				"0": {
+					"links": [
+						{
+							"node": "Math.001",
+							"socket": 0
+						}
+					]
+				}
+			}
 		}
 	},
 	"inputs": [
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0.0,
-				"max_value": 3.4028234663852886e+38,
-				"min_value": -3.4028234663852886e+38
-			},
 			"name": "X",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0.0,
-				"max_value": 3.4028234663852886e+38,
-				"min_value": -3.4028234663852886e+38
-			},
 			"name": "S Shift",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0.0,
-				"max_value": 3.4028234663852886e+38,
-				"min_value": -3.4028234663852886e+38
-			},
 			"name": "S Low",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0.0,
-				"max_value": 3.4028234663852886e+38,
-				"min_value": -3.4028234663852886e+38
-			},
 			"name": "S High",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0,
-				"max_value": 7,
-				"min_value": 0
-			},
+			"max_value": 7,
+			"min_value": 0,
 			"name": "S Mask",
 			"bl_idname": "NodeSocketInt"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0.0,
-				"max_value": 3.4028234663852886e+38,
-				"min_value": -3.4028234663852886e+38
-			},
 			"name": "S TexSize",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0,
-				"max_value": 1,
-				"min_value": 0
-			},
+			"max_value": 1,
+			"min_value": 0,
 			"name": "S Clamp",
 			"bl_idname": "NodeSocketInt"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0,
-				"max_value": 1,
-				"min_value": 0
-			},
+			"max_value": 1,
+			"min_value": 0,
 			"name": "S Mirror",
 			"bl_idname": "NodeSocketInt"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0.0,
-				"max_value": 3.4028234663852886e+38,
-				"min_value": -3.4028234663852886e+38
-			},
 			"name": "Y",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0.0,
-				"max_value": 3.4028234663852886e+38,
-				"min_value": -3.4028234663852886e+38
-			},
 			"name": "T Shift",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0.0,
-				"max_value": 3.4028234663852886e+38,
-				"min_value": -3.4028234663852886e+38
-			},
 			"name": "T Low",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0.0,
-				"max_value": 3.4028234663852886e+38,
-				"min_value": -3.4028234663852886e+38
-			},
 			"name": "T High",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0,
-				"max_value": 7,
-				"min_value": 0
-			},
+			"max_value": 7,
+			"min_value": 0,
 			"name": "T Mask",
 			"bl_idname": "NodeSocketInt"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0.0,
-				"max_value": 3.4028234663852886e+38,
-				"min_value": -3.4028234663852886e+38
-			},
 			"name": "T TexSize",
 			"bl_idname": "NodeSocketFloat"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0,
-				"max_value": 1,
-				"min_value": 0
-			},
+			"max_value": 1,
+			"min_value": 0,
 			"name": "T Clamp",
 			"bl_idname": "NodeSocketInt"
 		},
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": 0,
-				"max_value": 1,
-				"min_value": 0
-			},
+			"max_value": 1,
+			"min_value": 0,
 			"name": "T Mirror",
 			"bl_idname": "NodeSocketInt"
 		}
 	],
 	"outputs": [
 		{
-			"data": {
-				"attribute_domain": "POINT",
-				"default_value": [
-					0.0,
-					0.0,
-					0.0
-				],
-				"max_value": 3.4028234663852886e+38,
-				"min_value": -3.4028234663852886e+38
-			},
 			"name": "UV",
 			"bl_idname": "NodeSocketVector"
 		}
 	],
-	"cached_hash": "f72de0d37366e1498849fd51be0622e6"
+	"cached_hash": "17fc653962b4c5c95246bbf1c0e5d7b2"
 }
